@@ -216,7 +216,8 @@ public class PostService {
   }
 
   private Long getAlgorithmId(Long postId) {
-    return postAlgorithmRepository.findByPostId(postId).getFirst().getAlgorithmId();
+//    return postAlgorithmRepository.findByPostId(postId).getFirst().getAlgorithmId();
+    return postAlgorithmRepository.findByPostId(postId).get(0).getAlgorithmId();
   }
 
   private Long updatePostAlgorithm(Long postId, Long newAlgorithmId) {
